--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
 tensorflow==2.13.0
-keras
-numpy>=1.22.0
-pillow>=10.0.0
-gradio>=4.0.0
-streamlit>=1.27.0
-flask>=2.0.0
-gunicorn>=20.1.0
-werkzeug>=2.0.0
-opencv-python-headless
-opencv-python
-transformers
-tiktoken
-sentencepiece
-scikit-learn
-groq
+keras==2.13.0
+numpy==1.24.3
+pillow==10.0.0
+gradio==4.44.0
+streamlit==1.27.0
+flask==2.0.0
+gunicorn==20.1.0
+werkzeug==2.0.0
+opencv-python-headless==4.8.0.76
+opencv-python==4.8.0.76
+transformers==4.35.0
+tiktoken==0.5.1
+sentencepiece==0.1.99
+scikit-learn==1.3.0
+groq==0.4.0
+huggingface-hub==0.19.4
