--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-tensorflow==2.10.0
-pillow==9.4.0
-gradio==3.38.0
-streamlit==1.22.0
-flask==2.0.0
-gunicorn==20.1.0
-werkzeug==2.0.0
-opencv-python-headless==4.7.0.72
-opencv-python==4.7.0.72
-transformers==4.28.0
-tiktoken==0.3.0
-sentencepiece==0.1.97
-scikit-learn==1.2.0
-groq==0.2.0
+tensorflow
+numpy
+pillow
+gradio
+streamlit
+flask
+gunicorn
+werkzeug
+opencv-python-headless
+opencv-python
+transformers
+tiktoken
+sentencepiece
+scikit-learn
+groq
