--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,7 @@
-tensorflow
-numpy
-pillow
-gradio
-streamlit
-flask
-gunicorn
-werkzeug
-opencv-python-headless
-opencv-python
-transformers
-tiktoken
-sentencepiece
-scikit-learn
+tensorflow==2.15.0
+numpy>=1.22.0
+pillow>=10.0.0
+gradio>=4.0.0
 groq
+opencv-python
+opencv-python-headless
