--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
 tensorflow==2.15.0
-keras==2.15.0
 numpy>=1.22.0
 pillow>=10.0.0
-gradio
+gradio>=4.0.0
 groq
 opencv-python
 opencv-python-headless
-transformers
-tf_keras
-fastapi 
-uvicorn
